Fixed dark mode for bullets

--- a/pages/big-ideas-little-pictures.module.css
+++ b/pages/big-ideas-little-pictures.module.css
@@ -52,6 +52,12 @@
   font-size: 0.875rem;
 }
 
+@media (prefers-color-scheme: dark) {
+  .tocSection::before {
+    background-color: #d97706;
+  }
+}
+
 .tocTitle {
   font-size: 1.125rem;
   font-weight: 600;
@@ -61,4 +67,8 @@
 .tocDescription {
   margin: 0;
   margin-top: 0.5rem;
+}
+
+.tocDescription i {
+  color: var(--color-textSubdued);
 }
